# oci-context-mcp

./: .dockerignore  .env.example  .gitignore  API_REFERENCE.md  BUILD_PLAN.md  Dockerfile  LICENSE  PART1-mcp-server.md  PART2-infra-docker.md  PART3-terraform.md  README.md  TECH_SPEC.md  aider-instructions.md  mcp_server.py  pyproject.toml  requirements.txt
.githooks/: pre-push
.github/: dependabot.yml
docs/: agents.md
docs/Main/: ARCHITECTURE.md  architecture-diagram.html
docs/todo/: 01-pyproject-fixes.md  02-cors-lockdown.md  03-multi-tenant-auth-manager.md  04-tenant-registry-db.md  05-multi-tenant-jwt-gateway.md  06-landing-page-signup.md  07-nvidioci-inference-integration.md  08-okoci-deploy-cli.md  09-mcp-write-tools-f4.md
infra/: main.tf  outputs.tf  provider.tf  variables.tf
scripts/: push_to_ocir.sh  scan_secrets.py
terminal_test/: animated_bar.py
